--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,7 @@
       content="Mitsamay Lands Adininstration System"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    /> -->
+  -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -25,7 +22,7 @@
     </style> -->
   </head>
   <body>
-    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <div id="root"></div>
   </body>
 </html>
