--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <title>Mitsamay System</title>
-    <!-- <style>
+    <style>
       body {
         margin: 0;
       }
-    </style> -->
+    </style>
   </head>
   <body>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
